parser/src/tests/snapshots/flylang_parser__tests__if_else.snap
---
source: parser/src/tests/mod.rs
expression: code
---
Ok(
    [
        Expr(
            Spanned(
                Assignment {
                    name: Spanned(
                        Identifier(
                            "number",
                        ),
                        1..7,
                    ),
                    value: Spanned(
                        Number(
                            "49",
                        ),
                        10..12,
                    ),
                },
                1..12,
            ),
        ),
        If(
            If {
                condition: Spanned(
                    Equals(
                        Spanned(
                            Identifier(
                                "number",
                            ),
                            17..23,
                        ),
                        Spanned(
                            Number(
                                "49",
                            ),
                            27..29,
                        ),
                    ),
                    17..29,
                ),
                body: Expr(
                    Spanned(
                        Block(
                            [
                                Expr(
                                    Spanned(
                                        Call {
                                            callee: Spanned(
                                                Identifier(
                                                    "print",
                                                ),
                                                36..41,
                                            ),
                                            parameters: [
                                                Spanned(
                                                    String(
                                                        "Forty-nine looks like fortune!",
                                                    ),
                                                    42..73,
                                                ),
                                            ],
                                        },
                                        42..75,
                                    ),
                                ),
                            ],
                        ),
                        30..77,
                    ),
                ),
                else_body: Some(
                    If(
                        If {
                            condition: Spanned(
                                Less(
                                    Spanned(
                                        Identifier(
                                            "number",
                                        ),
                                        86..92,
                                    ),
                                    Spanned(
                                        Number(
                                            "49",
                                        ),
                                        95..97,
                                    ),
                                ),
                                86..97,
                            ),
                            body: Expr(
                                Spanned(
                                    Block(
                                        [
                                            Expr(
                                                Spanned(
                                                    Call {
                                                        callee: Spanned(
                                                            Identifier(
                                                                "print",
                                                            ),
                                                            104..109,
                                                        ),
                                                        parameters: [
                                                            Spanned(
                                                                String(
                                                                    "It's too early!",
                                                                ),
                                                                110..126,
                                                            ),
                                                        ],
                                                    },
                                                    110..128,
                                                ),
                                            ),
                                        ],
                                    ),
                                    98..130,
                                ),
                            ),
                            else_body: Some(
                                If(
                                    If {
                                        condition: Spanned(
                                            Greater(
                                                Spanned(
                                                    Identifier(
                                                        "number",
                                                    ),
                                                    139..145,
                                                ),
                                                Spanned(
                                                    Number(
                                                        "49",
                                                    ),
                                                    148..150,
                                                ),
                                            ),
                                            139..150,
                                        ),
                                        body: Expr(
                                            Spanned(
                                                Block(
                                                    [
                                                        Expr(
                                                            Spanned(
                                                                Call {
                                                                    callee: Spanned(
                                                                        Identifier(
                                                                            "print",
                                                                        ),
                                                                        157..162,
                                                                    ),
                                                                    parameters: [
                                                                        Spanned(
                                                                            String(
                                                                                "It's too late!",
                                                                            ),
                                                                            163..178,
                                                                        ),
                                                                    ],
                                                                },
                                                                163..180,
                                                            ),
                                                        ),
                                                    ],
                                                ),
                                                151..182,
                                            ),
                                        ),
                                        else_body: Some(
                                            Expr(
                                                Spanned(
                                                    Block(
                                                        [
                                                            Expr(
                                                                Spanned(
                                                                    Call {
                                                                        callee: Spanned(
                                                                            Identifier(
                                                                                "print",
                                                                            ),
                                                                            194..199,
                                                                        ),
                                                                        parameters: [
                                                                            Spanned(
                                                                                String(
                                                                                    "Intapreta guna sei wut",
                                                                                ),
                                                                                200..223,
                                                                            ),
                                                                        ],
                                                                    },
                                                                    200..225,
                                                                ),
                                                            ),
                                                        ],
                                                    ),
                                                    188..227,
                                                ),
                                            ),
                                        ),
                                    },
                                ),
                            ),
                        },
                    ),
                ),
            },
        ),
    ],
)
