parser/src/tests/snapshots/flylang_parser__tests__predefined_values_in_function_args.snap
---
source: parser/src/tests/mod.rs
expression: code
---
Ok(
    [
        Function(
            Function {
                name: Spanned(
                    Identifier(
                        "log",
                    ),
                    6..9,
                ),
                visibility: Global,
                arguments: [
                    Spanned(
                        Identifier(
                            "x",
                        ),
                        10..11,
                    ),
                    Spanned(
                        Assignment {
                            name: Spanned(
                                Identifier(
                                    "base",
                                ),
                                13..17,
                            ),
                            value: Spanned(
                                Identifier(
                                    "E",
                                ),
                                20..21,
                            ),
                        },
                        13..21,
                    ),
                ],
                body: Expr(
                    Spanned(
                        Block(
                            [],
                        ),
                        23..36,
                    ),
                ),
            },
        ),
    ],
)
