parser/src/tests/snapshots/flylang_parser__tests__record_with_multiple_fields.snap
---
source: parser/src/tests/mod.rs
expression: code
---
Ok(
    [
        RecordDefinition(
            RecordDefinition {
                name: Spanned(
                    "Test",
                    8..12,
                ),
                visibility: Global,
                fields: Spanned(
                    [
                        VariableDefinition(
                            VariableDefinition {
                                name: Spanned(
                                    "x",
                                    23..24,
                                ),
                                visibility: Global,
                                type_annotation: None,
                                value: None,
                            },
                        ),
                        VariableDefinition(
                            VariableDefinition {
                                name: Spanned(
                                    "y",
                                    33..34,
                                ),
                                visibility: Global,
                                type_annotation: None,
                                value: None,
                            },
                        ),
                        VariableDefinition(
                            VariableDefinition {
                                name: Spanned(
                                    "z",
                                    43..44,
                                ),
                                visibility: Global,
                                type_annotation: None,
                                value: None,
                            },
                        ),
                    ],
                    13..46,
                ),
            },
        ),
    ],
)
