parser/src/tests/snapshots/flylang_parser__tests__record_with_one_pub_field.snap
---
source: parser/src/tests/mod.rs
expression: code
---
Ok(
    [
        RecordDefinition(
            RecordDefinition {
                name: Spanned(
                    "Test",
                    8..12,
                ),
                visibility: Global,
                fields: Spanned(
                    [
                        VariableDefinition(
                            VariableDefinition {
                                name: Spanned(
                                    "x",
                                    22..23,
                                ),
                                visibility: Global,
                                type_annotation: None,
                                value: None,
                            },
                        ),
                    ],
                    13..25,
                ),
            },
        ),
    ],
)
