parser/src/tests/snapshots/flylang_parser__tests__record_with_private_fields.snap
---
source: parser/src/tests/mod.rs
expression: code
---
Ok(
    [
        RecordDefinition(
            RecordDefinition {
                name: Spanned(
                    "Test",
                    8..12,
                ),
                visibility: Global,
                fields: Spanned(
                    [
                        VariableDefinition(
                            VariableDefinition {
                                name: Spanned(
                                    "x",
                                    27..28,
                                ),
                                visibility: Local,
                                type_annotation: None,
                                value: None,
                            },
                        ),
                        VariableDefinition(
                            VariableDefinition {
                                name: Spanned(
                                    "y",
                                    41..42,
                                ),
                                visibility: Local,
                                type_annotation: None,
                                value: None,
                            },
                        ),
                        VariableDefinition(
                            VariableDefinition {
                                name: Spanned(
                                    "z",
                                    55..56,
                                ),
                                visibility: Local,
                                type_annotation: None,
                                value: None,
                            },
                        ),
                    ],
                    13..58,
                ),
            },
        ),
    ],
)
