parser/src/tests/snapshots/flylang_parser__tests__simple_assignment.snap
---
source: parser/src/tests/mod.rs
expression: code
---
Ok(
    [
        Expr(
            Spanned(
                Assignment {
                    name: Spanned(
                        Identifier(
                            "four",
                        ),
                        1..5,
                    ),
                    value: Spanned(
                        Add(
                            Spanned(
                                Number(
                                    "2",
                                ),
                                8..9,
                            ),
                            Spanned(
                                Number(
                                    "2",
                                ),
                                12..13,
                            ),
                        ),
                        8..13,
                    ),
                },
                1..13,
            ),
        ),
        Expr(
            Spanned(
                Assignment {
                    name: Spanned(
                        Identifier(
                            "nine",
                        ),
                        14..18,
                    ),
                    value: Spanned(
                        Add(
                            Spanned(
                                Number(
                                    "4",
                                ),
                                21..22,
                            ),
                            Spanned(
                                Number(
                                    "5",
                                ),
                                25..26,
                            ),
                        ),
                        21..26,
                    ),
                },
                14..26,
            ),
        ),
    ],
)
